@@ -34,7 +34,6 @@ import pcgen.cdom.enumeration.CharID;
 import pcgen.cdom.enumeration.ObjectKey;
 import pcgen.cdom.enumeration.SkillCost;
 import pcgen.core.Ability;
-import pcgen.core.Deity;
 import pcgen.core.Domain;
 import pcgen.core.Language;
 import pcgen.core.PCClass;
@@ -72,15 +71,8 @@ public class TransparentPlayerCharacter extends PlayerCharacter
 			super(id);
 		}
 
-		public Deity deity;
 		public Set<Domain> domainSet = new ListSet<>();
 		public Set<Language> languageSet = new ListSet<>();
-
-		@Override
-		public Deity getDeity()
-		{
-			return deity;
-		}
 
 		@Override
 		public Set<Domain> getDomainSet()
@@ -149,7 +141,7 @@ public class TransparentPlayerCharacter extends PlayerCharacter
 		public Float getRank(Skill sk)
 		{
 			return ((skillSet == null) || (skillSet.get(sk) == null)) ? 0.0f
-				: new Float(skillSet.get(sk));
+				: Float.valueOf(skillSet.get(sk));
 		}
 
 	}
@@ -203,7 +195,7 @@ public class TransparentPlayerCharacter extends PlayerCharacter
 	public Float getRank(Skill sk)
 	{
 		return ((skillSet == null) || (skillSet.get(sk) == null)) ? 0.0f
-			: new Float(skillSet.get(sk));
+			: Float.valueOf(skillSet.get(sk));
 	}
 
 	@Override
